APP: auto style, only set 'include upper bound' option if editor exists; table classs: break words to avoid glitch with url visible in text

--- a/app/src/css/mx_table.css
+++ b/app/src/css/mx_table.css
@@ -6,3 +6,7 @@
 .mx .table > thead > tr > th {
   width: 1%;
 }
+
+.mx .table {
+  word-break: break-word;
+}
